--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
-/* Tag selector to select the 'body' element */
+/* Set the background of the <body> element */
 body {
-  /* Your code here! */
+  background-color: #00b3e6;
 }
 
-/* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
+/* Set the <div> elements */
 div {
-  /* Your code here! */
+  width: 700px;
+  margin: auto;
+  font-family: "Helvetica Neue", sans-serif;
+  background-color: white;
+  padding: 30px;
 }
 
-/* ID selector to select the element with id 'main-header' */
+/* Set the element with id #main-header */
 #main-header {
-  /* Your code here! */
-  color: red;
+  font-size: 22px;
 }
 
-/* Class selector to select elements containing the class 'perspective-questions' */
+/* Set the elements with class .perspective-questions */
 .perspective-questions {
-  /* Your code here! */
+  font-style: italic;
 }
